healthCloudAgentDemo/healthCloudAgentDemo/force-app/main/default/objects/Account_Summary__c/fields/Agentforce_Summary__c.field-meta.xml
<CustomField>
    <fullName>Agentforce_Summary__c</fullName>
    <label>Agentforce Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>